fix: landscape mode for the predictions overlaps search

--- a/my-app/src/app/pages/introduction-page/introduction-page.component.css
+++ b/my-app/src/app/pages/introduction-page/introduction-page.component.css
@@ -380,7 +380,7 @@ app-search-bar {
     .predictions {
         width: 40%;
         height: 70%;
-        margin-top: 50px;
+        margin-top: 55px;
     }
 
     .container-info {
